--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1367,6 +1367,9 @@ a {
     padding: 0 1rem 1rem;
   }
 }
+.cid-ty2o0v3c9d .item-wrapper {
+  background: transparent;
+}
 .cid-ty2o0v3c9d .mbr-section-btn {
   margin-top: auto !important;
 }
